--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Comfortaa:700|Lato:400,400i,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="assets/css/blobz.min.css" />
     <script
       src="https://kit.fontawesome.com/846079d806.js"
       crossorigin="anonymous"
